--- a/DragonGame/DragonGame/DragonGame.csproj
+++ b/DragonGame/DragonGame/DragonGame.csproj
@@ -131,9 +131,7 @@
   <ItemGroup>
     <Resource Include="Pictures\Achievments\Achievment_1.gif" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pictures\Backgrounds\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Pictures\Monsters\Enemy_Hunter.gif" />
   </ItemGroup>
@@ -206,6 +204,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Pictures\Characters\Hunter_Boy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Backgrounds\Fight_map.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
