--- a/DragonGame/DragonGame/DragonGame.csproj
+++ b/DragonGame/DragonGame/DragonGame.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.2-beta2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -59,7 +63,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ActiveItems.cs" />
     <Compile Include="BasicPlayerAttack.cs" />
+    <Compile Include="IInvent.cs" />
+    <Compile Include="ILocation.cs" />
+    <Compile Include="InventArmor.cs" />
+    <Compile Include="Inventory.cs" />
     <Compile Include="IPlayerAttack.cs" />
     <Compile Include="Loot.cs" />
     <Compile Include="LootDevil.cs" />
@@ -67,6 +76,8 @@
     <Compile Include="LootMage.cs" />
     <Compile Include="LootWarrior.cs" />
     <Compile Include="Monster.cs" />
+    <Compile Include="Reach.cs" />
+    <Compile Include="Rift.cs" />
     <Compile Include="SpecialAttackMonster.cs" />
     <Compile Include="SpecialPlayerAttack.cs" />
     <Compile Include="StrongerPlayerAttack.cs" />
@@ -221,6 +232,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Pictures\Monsters\Enemy_Snake.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pictures\Resources\Sprite1.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
